[package]
name = "ok"
version = "2.0.0-alpha"
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = "3.2.20"
console = "0.15.1"
rand = "0.8.5"
serde_json = "1.0.85"
textplots = "0.8.0"
whoami = "1.2.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.144", features = ["derive"] }

[features]
default = ["online"]
online = []

